# LauncherServer

./: .gitignore  CMakeLists.txt  LauncherServer.cpp  start.bat
src/: LauncherServer.cpp  launcher_server.hpp
src/handlers/: handle_file_download.cpp  handle_file_download.hpp  login_handler.cpp  login_handler.hpp  logout_handler.cpp  logout_handler.hpp  register_handler.cpp  register_handler.hpp
src/utility/: flaim.cpp  flaim.hpp
